--- a/index.ipynb
+++ b/index.ipynb
@@ -29,11 +29,376 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Matthew Parker\\.conda\\envs\\learn-env\\lib\\site-packages\\IPython\\core\\interactiveshell.py:2785: DtypeWarning: Columns (1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143,144,145,146,147,148,149,150,151,152,153,154,155,156,157,158,159,160,161,162,163,164,165,172,173,174,175,176,177,178,179,180,181,182,183,184,185,186,187,188,189,190,191,192,193,194,195,196,197,198,199,200,201,202,203,204,205,207,208,209,210,211,212,213,214,215,216,217,218,219,220,221,222,223,224,225,226,227) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
-    "#Your code here"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "data = pd.read_csv('multipleChoiceResponses_cleaned.csv', encoding='latin1')\n",
+    "metadata = pd.read_csv('schema.csv', encoding='latin1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 26394 entries, 0 to 26393\n",
+      "Columns: 230 entries, GenderSelect to AdjustedCompensation\n",
+      "dtypes: float64(15), object(215)\n",
+      "memory usage: 46.3+ MB\n",
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GenderSelect</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>EmploymentStatus</th>\n",
+       "      <th>StudentStatus</th>\n",
+       "      <th>LearningDataScience</th>\n",
+       "      <th>CodeWriter</th>\n",
+       "      <th>CareerSwitcher</th>\n",
+       "      <th>CurrentJobTitleSelect</th>\n",
+       "      <th>TitleFit</th>\n",
+       "      <th>...</th>\n",
+       "      <th>JobFactorTitle</th>\n",
+       "      <th>JobFactorCompanyFunding</th>\n",
+       "      <th>JobFactorImpact</th>\n",
+       "      <th>JobFactorRemote</th>\n",
+       "      <th>JobFactorIndustry</th>\n",
+       "      <th>JobFactorLeaderReputation</th>\n",
+       "      <th>JobFactorDiversity</th>\n",
+       "      <th>JobFactorPublishingOpportunity</th>\n",
+       "      <th>exchangeRate</th>\n",
+       "      <th>AdjustedCompensation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Non-binary, genderqueer, or gender non-conforming</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Employed full-time</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DBA/Database Engineer</td>\n",
+       "      <td>Fine</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>Not employed, but looking for work</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Somewhat important</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>Not employed, but looking for work</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Very Important</td>\n",
+       "      <td>Very Important</td>\n",
+       "      <td>Very Important</td>\n",
+       "      <td>Very Important</td>\n",
+       "      <td>Very Important</td>\n",
+       "      <td>Very Important</td>\n",
+       "      <td>Very Important</td>\n",
+       "      <td>Very Important</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>United States</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>Independent contractor, freelancer, or self-em...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Operations Research Practitioner</td>\n",
+       "      <td>Poorly</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>250000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Male</td>\n",
+       "      <td>Taiwan</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>Employed full-time</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Computer Scientist</td>\n",
+       "      <td>Fine</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 230 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                        GenderSelect        Country   Age  \\\n",
+       "0  Non-binary, genderqueer, or gender non-conforming            NaN   NaN   \n",
+       "1                                             Female  United States  30.0   \n",
+       "2                                               Male         Canada  28.0   \n",
+       "3                                               Male  United States  56.0   \n",
+       "4                                               Male         Taiwan  38.0   \n",
+       "\n",
+       "                                    EmploymentStatus StudentStatus  \\\n",
+       "0                                 Employed full-time           NaN   \n",
+       "1                 Not employed, but looking for work           NaN   \n",
+       "2                 Not employed, but looking for work           NaN   \n",
+       "3  Independent contractor, freelancer, or self-em...           NaN   \n",
+       "4                                 Employed full-time           NaN   \n",
+       "\n",
+       "  LearningDataScience CodeWriter CareerSwitcher  \\\n",
+       "0                 NaN        Yes            NaN   \n",
+       "1                 NaN        NaN            NaN   \n",
+       "2                 NaN        NaN            NaN   \n",
+       "3                 NaN        Yes            NaN   \n",
+       "4                 NaN        Yes            NaN   \n",
+       "\n",
+       "              CurrentJobTitleSelect TitleFit         ...           \\\n",
+       "0             DBA/Database Engineer     Fine         ...            \n",
+       "1                               NaN      NaN         ...            \n",
+       "2                               NaN      NaN         ...            \n",
+       "3  Operations Research Practitioner   Poorly         ...            \n",
+       "4                Computer Scientist     Fine         ...            \n",
+       "\n",
+       "   JobFactorTitle JobFactorCompanyFunding JobFactorImpact JobFactorRemote  \\\n",
+       "0             NaN                     NaN             NaN             NaN   \n",
+       "1             NaN                     NaN             NaN             NaN   \n",
+       "2  Very Important          Very Important  Very Important  Very Important   \n",
+       "3             NaN                     NaN             NaN             NaN   \n",
+       "4             NaN                     NaN             NaN             NaN   \n",
+       "\n",
+       "  JobFactorIndustry JobFactorLeaderReputation JobFactorDiversity  \\\n",
+       "0               NaN                       NaN                NaN   \n",
+       "1               NaN        Somewhat important                NaN   \n",
+       "2    Very Important            Very Important     Very Important   \n",
+       "3               NaN                       NaN                NaN   \n",
+       "4               NaN                       NaN                NaN   \n",
+       "\n",
+       "  JobFactorPublishingOpportunity exchangeRate AdjustedCompensation  \n",
+       "0                            NaN          NaN                  NaN  \n",
+       "1                            NaN          NaN                  NaN  \n",
+       "2                 Very Important          NaN                  NaN  \n",
+       "3                            NaN          1.0             250000.0  \n",
+       "4                            NaN          NaN                  NaN  \n",
+       "\n",
+       "[5 rows x 230 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(data.info())\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 290 entries, 0 to 289\n",
+      "Data columns (total 3 columns):\n",
+      "Column      290 non-null object\n",
+      "Question    290 non-null object\n",
+      "Asked       290 non-null object\n",
+      "dtypes: object(3)\n",
+      "memory usage: 6.9+ KB\n",
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Column</th>\n",
+       "      <th>Question</th>\n",
+       "      <th>Asked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GenderSelect</td>\n",
+       "      <td>Select your gender identity. - Selected Choice</td>\n",
+       "      <td>All</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>GenderFreeForm</td>\n",
+       "      <td>Select your gender identity. - A different ide...</td>\n",
+       "      <td>All</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Country</td>\n",
+       "      <td>Select the country you currently live in.</td>\n",
+       "      <td>All</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Age</td>\n",
+       "      <td>What's your age?</td>\n",
+       "      <td>All</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>EmploymentStatus</td>\n",
+       "      <td>What's your current employment status?</td>\n",
+       "      <td>All</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Column                                           Question Asked\n",
+       "0      GenderSelect     Select your gender identity. - Selected Choice   All\n",
+       "1    GenderFreeForm  Select your gender identity. - A different ide...   All\n",
+       "2           Country          Select the country you currently live in.   All\n",
+       "3               Age                                   What's your age?   All\n",
+       "4  EmploymentStatus             What's your current employment status?   All"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(metadata.info())\n",
+    "metadata.head()"
    ]
   },
   {
@@ -53,7 +418,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Your code here"
+    "#Your code here\n",
+    "\n"
    ]
   },
   {
@@ -135,9 +501,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:learn-env] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-learn-env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -149,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
